syntax = "proto3";

option csharp_namespace ="GrpcSchool";
import "Protos/electiveyear.proto";

package SchoolApi;


service EnrollmentService {
    rpc CreateEnrollment(CreateEnrollmentRequest) returns (CreateEnrollmentResponse) {};
    rpc UpdateEnrollment(UpdateEnrollmentRequest) returns (UpdateEnrollmentResponse) {};
    rpc DeleteEnrollment(DeleteEnrollmentRequest) returns (DeleteEnrollmentResponse) {};
    rpc GetEnrollmentById(GetEnrollmentByIdRequest) returns (GetEnrollmentByIdResponse) {};
    rpc GetAllEnrollments(GetAllEnrollmentsRequest) returns (GetAllEnrollmentsResponse) {};
    rpc GetAllEnrollmentsByElectiveYear(GetAllEnrollmentsByElectiveYearRequest) returns (GetAllEnrollmentsResponse) {};
}


enum EnrollmentStatus {
    PRE_ENROLLED = 0;
    ENROLLED = 1;
    SUSPENDED = 2;
    CANCELLED = 3;
    REMOVED = 4;
}

message Enrollment {
    string id = 1;
    string studentid = 2;
    string attendantid = 3;
    bool isapproved = 4;
    ElectiveYear electiveyear = 5;
    string electiveyearid = 6;
    EnrollmentStatus enrollmentstatus = 7;
}

message CreateEnrollmentRequest {
    Enrollment enrollment = 1;
    string correlationid = 2;
}

message CreateEnrollmentResponse {
    Enrollment enrollmentcreated = 1;
}

message UpdateEnrollmentRequest {
    Enrollment enrollment = 1;
    string correlationid = 2;
}

message UpdateEnrollmentResponse {
    Enrollment enrollmentupdated = 1;
}

message DeleteEnrollmentRequest {
    string id = 1;
    string correlationid= 2;
}

message DeleteEnrollmentResponse {
    bool isenrollmentdeleted = 1;
}

message GetEnrollmentByIdRequest {
    string id = 1;
    string correlationid = 2;
}

message GetEnrollmentByIdResponse {
    Enrollment enrollment = 1;
}

message GetAllEnrollmentsRequest {
    string correlationid = 1;
}

message GetAllEnrollmentsByElectiveYearRequest {
    string electiveyearid = 1;
    string corrleationid = 2;
}

message GetAllEnrollmentsResponse {
    repeated Enrollment enrollments = 1;
}